add input sig hash
